fix sticky footer and align content within

--- a/sites/angry-men/css/style.css
+++ b/sites/angry-men/css/style.css
@@ -13,8 +13,9 @@ nav {
 	width: 100%;
 	background-color: #43332A;
 	position:relative;
-	top: -7px;
-	/*top: 100px;*/
+	top: 105px;
+	z-index: 5;
+
 }
 nav ul {
 	margin: 0 auto;
@@ -42,9 +43,6 @@ li a {
 	width: 960px;
 	margin: 0 auto;
 	/*border-left: solid 1px #43332A;*/
-
-	/*border:solid 1px #000;*/
-	/*min-height: 700px;*/
 }
 
 .navMenu {
@@ -55,6 +53,8 @@ li a {
 .jurorNav {
 	display:table;
 	margin: 0 auto;
+	border:solid 1px #000;
+
 }
 
 .jurorBox {
@@ -63,6 +63,7 @@ li a {
 	margin: 0 10px;
 	/*border: solid 1px #000;*/
 	float: left;
+	/*border: solid 1px #000;*/
 }
 .juror {
 	width; auto;
@@ -72,11 +73,16 @@ li a {
 	margin:0 auto;
 	position:relative;
 	bottom: 0px;
+	/*border: solid 1px #000;*/
 }
 
-.bottom {
+.Bottom {
 	position: absolute;
+	width: 100%;
+	height: 100px;
 	bottom: 0px;
+	/*text-align: center;*/
+
 }
 
 .bottomBar {
@@ -92,8 +98,11 @@ li a {
 	opacity: .4;
 	height: 37px;
 	bottom: 30px;
-
 }
 
+.centerIt {
+	position:relative;
+	left: 60px;
+}
 
 
